# Amplitude

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
audio-engine/: Cargo.toml
audio-engine/src/: analysis.rs  export.rs  graph.rs  lib.rs  midi.rs  mixer.rs  modulation.rs  processor.rs  scheduler.rs
audio-engine/src/dsp/: delay.rs  dynamics.rs  envelope.rs  filter.rs  mod.rs
audio-engine/src/nodes/: bass_enhancer.rs  compressor.rs  delay.rs  eq.rs  filter.rs  gain.rs  granular.rs  mod.rs  source.rs  synth.rs  wavetable.rs
audio-engine/src/synth/: allocator.rs  envelope.rs  filter.rs  granular.rs  lfo.rs  mod.rs  oscillator.rs  voice.rs  wavetable.rs
backend/: Cargo.toml
backend/src/: export_handler.rs  main.rs  ws.rs
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
frontend/public/: audio-processor.js
frontend/src/: App.tsx  index.css  store.ts
frontend/src/api/: WebSocketManager.ts
frontend/src/audio/: AudioContextManager.ts  AudioEngine.ts  TransportManager.ts
frontend/src/canvas/: ClipRenderer.ts  HitTest.ts  PlayheadRenderer.ts  RenderLoop.ts
frontend/src/components/: ArrangementView.tsx  DJPerformanceView.tsx  Deck.tsx  EffectRack.tsx  ExportDialog.tsx  LibraryPanel.tsx  MixerChannel.tsx  MixerPanel.tsx  ModulationMatrixView.tsx  PianoRoll.tsx  TopBar.tsx  Transport.tsx  VirtualKeyboard.tsx
frontend/src/interactions/: InteractionManager.ts
frontend/src/utils/: mockProject.ts
shared/src/: automation.rs  lib.rs  project.rs
(+11 files in other folders)
